test/classes/errors/newValueNotType2.good
newValueNotType2.chpl:7: error: type in 'new' expression is missing its argument list
newValueNotType2.chpl:10: error: type in 'new' expression is missing its argument list
